k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: default
spec:
  selector:
    app: podinfo
  ports:
    - name: http  # Nome da porta
      protocol: TCP
      port: 7000  # Porta externa
      targetPort: 9898  # Porta do container
      #nodePort: 30070
  type: NodePort  # Expondo a porta
